# agentspec

./: .agentspecignore  .cursorignore  .gitignore  2025-10-30-we-are-really-struggling-with-a-print-return-l.txt  AGENTS.md  AGENT_CONTEXT.md  AUDIT.md  BRANCH_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CLI_AUDIT_FINDINGS.md  CLI_FIXES_SUMMARY.md  CLI_PROVIDER_INCONSISTENCIES_FOUND.md  CLI_QUICKREF.md  COMPATIBILITY.md  CURSOR_WORKTREE_FIX.md  FORENSIC_AUDIT.md  HALLUCINATION_TEST_RESULTS.md  HANDOFF_JUPYTER_NOTEBOOK.md  HANDOFF_PROMPT_REVOLUTIONARY_ARCHITECTURE.md  HANDOFF_TO_NEXT_AGENT.md  IMPLEMENTATION_SUMMARY.md  MERGE_HELL_ANALYSIS.md  PROMPT_REFACTORING_SUMMARY.md  PROMPT_V2_SUMMARY.md  QUICK_DECISION_GUIDE.md  README.md  REAL_MERGE_ANALYSIS.md  RETROFIT_GUIDE.md  SESSION_SUMMARY_2025_11_03.md  SYSTEM_LOCKDOWN_SUMMARY.md  TOOLS.md  V2_PROMPTS_READY.md  agent_specs.md  prompt-issues-audit.md  pyproject.toml  requirements.txt  serena_task.md  setup.cfg  setup.sh  (+8 more)
.cursor/: .rules  settings.json
.serena/: project.yml
agentspec/: __init__.py  cli.py  collect.py  collect.py.bak  extract.py  generate.py  generate.py.bak  generate_critical.py  insert_metadata.py  lint.py  llm.py  notebook_ui.py  prompts.py  strip.py  utils.py
backups/: collect.py.bak  generate.py.bak
docs/: javascript-style-guide.md
notebooks/: build_agentspec_example.ipynb  build_agentspec_example_TEST.ipynb
scripts/: check_python_version.py  docker_aggressive_prune.py  mac_cleanup.py
tests/: BUGFIX_SUMMARY.md  README_REFERENCE_FILES.md  TEST_SUITE_SUMMARY.md  ref_Dashboard.tsx  ref_indexing.js  ref_phaxio_service.py  test_agentspecignore_stock_patterns.py  test_basic.py  test_builtin_agentspecignore.py  test_collect_javascript.py  test_every_flag_combination.py  test_extract_javascript_agentspec.py  test_generate_javascript.py  test_hallucination_detection.py  test_javascript_adapter.py  test_javascript_exclusions.py  test_lint_javascript.py  test_metadata_accuracy.py  test_notebook_functionality.py  (+2 more)
(+125 files in other folders)
