[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentspec"
version = "0.1.0"
description = "Structured, enforceable, and extractable docstrings for AI-assisted codebases."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "David Montgomery", email = "dmontg@gmail.com" }
]
keywords = ["ai", "lint", "docstrings", "agents", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
agentspec = "agentspec.cli:main"

[tool.setuptools.packages.find]
include = ["agentspec*"]
