[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentspec"
version = "0.1.0"
description = "Structured, enforceable, and extractable docstrings for AI-assisted codebases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=13.7.0",
    "rich-argparse>=1.4.0",
]
license = { text = "MIT" }
authors = [
    { name = "David Montgomery", email = "dmontg@gmail.com" }
]
keywords = ["ai", "lint", "docstrings", "agents", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai"]
javascript = ["tree-sitter==0.20.1", "tree-sitter-languages==1.10.2"]
all = ["anthropic", "openai", "tree-sitter==0.20.1", "tree-sitter-languages==1.10.2"]

[project.scripts]
agentspec = "agentspec.cli:main"

[tool.setuptools.packages.find]
include = ["agentspec*"]
